--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: my testing page
 description: I want to try out some functions on github pages.
-theme: jekyll-theme-cayman
+remote_theme: mmistakes/minimal-mistakes
 show_downloads: false
 github:
   is_project_page: false
