--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
 title: my testing page
 description: I want to try out some functions on github pages.
+
+plugins:
+  - jekyll-remote-theme
 remote_theme: mmistakes/minimal-mistakes
+
 show_downloads: false
+
 github:
   is_project_page: false
