--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 title: my testing page
 description: I want to try out some functions on github pages.
 
-remote_theme: "mmistakes/minimal-mistakes"
+plugins:
+  - jekyll-remote-theme
+
+remote_theme: mmistakes/minimal-mistakes
 
 show_downloads: false
 
