--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: my testing page
 description: I want to try out some functions on github pages.
 
-plugins:
-  - jekyll-remote-theme
-
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: benbalter/retlab
 
 show_downloads: false
 
