--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ description: I want to try out some functions on github pages.
 
 show_downloads: false
 github:
-  is_project_page: false
+  public: false
   
 theme: jekyll-theme-tactile
